# fv_mer

./: .gitignore  .gitmodules  README.md  pyproject.toml
configs/data/: merlin.yaml  pooled.yaml
configs/model/: abdominal_fvlm.yaml  biomed_cxrbert.json
configs/train/: gh200.yaml  smoke.yaml
scripts/: check_data.sh  setup_helios.sh  submit_smoke.sh  submit_train.sh
slurm/: data_check.sbatch  setup.sbatch  smoke.sbatch  train.sbatch
src/: decord.py
src/fvlm_merlin/: __init__.py  assets.py  cli.py  config.py  features.py  geometry.py  lavis_adapter.py  manifest.py  organs.py  training.py  validate.py
tests/: test_features.py  test_geometry.py  test_manifest.py  test_validate.py
