[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fvlm-merlin"
version = "0.1.0"
description = "Train abdominal fVLM encoders and export reusable features."
requires-python = ">=3.10"
dependencies = [
  "batchgenerators==0.25",
  "einops==0.8.0",
  "huggingface-hub==0.25.0",
  "iopath==0.1.10",
  "matplotlib==3.9.2",
  "monai==1.3.2",
  "nibabel==5.2.1",
  "numpy==1.26.4",
  "omegaconf==2.3.0",
  "pandas==2.2.2",
  "PyYAML==6.0.2",
  "scikit-image==0.24.0",
  "scipy==1.14.1",
  "timm==0.4.12",
  "tokenizers==0.13.3",
  "transformers==4.25.0",
  "webdataset==0.2.100",
]

[project.optional-dependencies]
test = ["pytest==8.3.3"]

[project.scripts]
fvlm-merlin = "fvlm_merlin.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["decord"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
